--- a/pages/button.mdx
+++ b/pages/button.mdx
@@ -1,3 +1,10 @@
+# Button
+
+test teste
+
+## Button example
+test 
+
 import Button from '@/components/Button';
 import { StarIcon } from '@/components/Icons';
 
